--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,14 @@
-browser = chrome
-headless = no
-url = https://app.hubspot.com/login
-username= bikashmishra1277@gmail.com
+#browser = chrome
+#headless = no
+#url = https://app.hubspot.com/login
+#username= bikashmishra1277@gmail.com
+#
+#password = Test@2023
+#User Defined Settings (In Seconds)
+openweathermap.url=https://openweathermap.org/
+maxintegertimeout=50
+#TestStatus
+Passed=Pass
+Failed=Fail
+Skipped=Skip
 
-password = Test@2023
