--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,16 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
